.provarCaches/00D410000011HE0EAM/objects/rstk__sormaser__c.object
<CustomObject>
    <description>sormaser__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sormaser_sormadmd__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  rstk__sormaser_srlno__c</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__sormaser_sormadmd__r.Name &amp; &apos;_&apos; &amp; rstk__sormaser_srlno__c</formula>
        <inlineHelpText>Internal formula for constructing the associated name field, which is an internal system field, not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>null</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sormaser_authorized__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this indicates that this Serial Number has been authorized for return.</inlineHelpText>
        <label>Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sormaser_inspect__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this indicates that this Serial Number is in an Inspection location.</inlineHelpText>
        <label>In Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sormaser_origsocondev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Contract Device</label>
        <referenceTo>rstk__socondev__c</referenceTo>
        <relationshipLabel>RMA Serial Detail</relationshipLabel>
        <relationshipName>sormasers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormaser_received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this indicates that this Serial Number has been received.</inlineHelpText>
        <label>Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sormaser_replsocondev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced by Contract Device</label>
        <referenceTo>rstk__socondev__c</referenceTo>
        <relationshipLabel>RMA Serial Detail (Replaced by Contract Device)</relationshipLabel>
        <relationshipName>sormasers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormaser_scrapped__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this indicates that this Serial Number has been scrapped.</inlineHelpText>
        <label>Scrapped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sormaser_shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this indicates that this Serial Number has been shipped.</inlineHelpText>
        <label>Shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sormaser_sormadmd__c</fullName>
        <inlineHelpText>This is a reference to the RMA Demand record</inlineHelpText>
        <label>RMA Demand</label>
        <referenceTo>rstk__sormadmd__c</referenceTo>
        <relationshipName>RMA_Serial_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sormaser_sowarr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Warranty record associated with this warranted serialized Product.</inlineHelpText>
        <label>Shipped Item Warranty</label>
        <referenceTo>rstk__sowarr__c</referenceTo>
        <relationshipLabel>RMA Serial Detail</relationshipLabel>
        <relationshipName>sormasers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormaser_srlno__c</fullName>
        <inlineHelpText>This is the Serial Number of the item being returned</inlineHelpText>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>RMA Serial Detail</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RMA_Serial_Detail</fullName>
        <columns>NAME</columns>
        <columns>rstk__sormaser_sormadmd__c</columns>
        <columns>rstk__sormaser_srlno__c</columns>
        <columns>rstk__sormaser_shipped__c</columns>
        <columns>rstk__sormaser_authorized__c</columns>
        <columns>rstk__sormaser_received__c</columns>
        <columns>rstk__sormaser_inspect__c</columns>
        <columns>rstk__sormaser_scrapped__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>RMA Serial Detail</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMA Serial Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>